--- a/package.json
+++ b/package.json
@@ -8,18 +8,21 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.4.0",
     "expo": "^39.0.3",
     "expo-status-bar": "~1.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
     "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.1",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
+    "@types/react-redux": "^7.1.9",
     "@types/styled-components": "^5.1.3",
     "react-native-web": "~0.13.7",
     "typescript": "~3.9.5"
